--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ahmadjubran/airline-system#readme",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "jest": "^29.2.2",
     "uuid": "^9.0.0"
   }
