--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "homepage": "https://github.com/ahmadjubran/airline-system#readme",
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
+    "dotenv": "^16.0.3",
     "jest": "^29.2.2",
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3",
     "uuid": "^9.0.0"
   }
 }
